2010-11-07 Borut Razem <borut.razem AT siol.net>

	* Makefile.common.in, sdcc_vc_in.h, sdccconf_in.h, src/pic14/main.c,
	  src/port.h, src/SDCCast.c, src/SDCCmain.c, src/SDCCopt.c,
	  src/SDCCpeeph.c, src/SDCCsymt.c:
	  TARGET_ID_PIC1 renamed to TARGET_ID_PIC14,
	  TARGET_IS_PIC renamed to TARGET_IS_PIC14
	  OPT_DISABLE_PIC renamed to OPT_DISABLE_PIC14

2010-11-06 Borut Razem <borut.razem AT siol.net>

	* support/Util/MySystem.c: use native WIN32 API calls in sdcc_pclose()

2010-11-05 Borut Razem <borut.razem AT siol.net>

	* support/Util/MySystem.c: use native WIN32 sdcc_popen and sdcc_pclose
	  solution due to a bug in wine msvrct.dll popen implementation
	* support/Util/MySystem.c, support/Util/MySystem.h,  src/SDCCmain.c,
	  src/ds390/main.c, src/pic14/main.c, src/pic16/main.c, src/z80/main.c:
	  my_xxxx() renamed to sdcc_xxxx()

2010-11-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCcse.c:
	  Optimization for & on booleans.
	* src/z80/gen.c,
	  src/z80/peeph-z80.def,
	  support/regression/tests/bitopcse.c:
	  Fixes for z80 using --reserve-regs-iy and gbz80.

2010-11-05 Raphael Neider <rneider AT web.de>

	* sdas/as8051/Makefile.in,
	  sdas/asz80/Makefile.in,
	  sdas/as6808/Makefile.in,
	  sdas/asgb/Makefile.in: fix order of linking with -lm

2010-11-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/peep.c:
	  Improvements relating to the use of hl as an alternative to iy.

2010-11-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.h,
	  src/z80/gen.c,
	  src/z80/ralloc.c,
	  src/z80/main.c,
	  src/z80/z80.h,
	  src/z80/peeph-z80.def:
	  Some steps towards implementing #3074318, and minor gbz80 fixes.

2010-11-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/peep.c:
	  Fixed #3093447.

2010-11-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCmain.c (setIncludePath): fixed uninitialized target

2010-11-03 Borut Razem <borut.razem AT siol.net>

	* device/include/pic14/sdcc-lib.h: